- in deleteCurrentItem, set d->imageInfoCurrent and d->imageInfoList to new image as well - add loadCurrentList for shared code of loadURL and loadImageInfos, so that loadURL can   now properly set d->imageInfoList to empty list

BUG: 135307


svn path=/trunk/extragear/graphics/digikam/; revision=593901